# LSP4SPL

./: .gitignore  Cargo.toml  README.md  bacon.toml
.github/workflows/: release.yml  test.yml
editors/code/: LICENSE.txt  README.md  package-lock.json  package.json
editors/code/src/: extension.ts
editors/code/syntaxes/: spl.tmLanguage.json
editors/nvim/tree-sitter-spl/: .gitignore  Cargo.toml  grammar.js  package.json
editors/nvim/tree-sitter-spl/queries/: highlights.scm
lsp4spl/: Cargo.toml
lsp4spl/src/: document.rs  error.rs  features.rs  io.rs  main.rs  server.rs
lsp4spl/src/features/: completion.rs  fold.rs  formatting.rs  goto.rs  hover.rs  references.rs  semantic_tokens.rs  signature_help.rs
lsp4spl/src/features/tests/: completion.rs  fold.rs  formatting.rs  goto.rs  mod.rs  references.rs
lsp4spl/src/features/tests/snapshots/: lsp4spl__features__tests__completion__empty.snap  lsp4spl__features__tests__completion__expr.snap  lsp4spl__features__tests__completion__no_else.snap  lsp4spl__features__tests__completion__no_main.snap  lsp4spl__features__tests__completion__param_type.snap  lsp4spl__features__tests__completion__stmt.snap  lsp4spl__features__tests__completion__valid_else.snap  lsp4spl__features__tests__completion__var_and_stmt.snap  lsp4spl__features__tests__formatting__acker.snap  lsp4spl__features__tests__formatting__big_test.snap  lsp4spl__features__tests__formatting__empty.snap  lsp4spl__features__tests__formatting__proc_dec_no_body.snap  lsp4spl__features__tests__formatting__type_dec_missing_semic.snap
lsp4spl/tests/programs/: acker.spl  bigtest.spl
lsp_base/: Cargo.toml
lsp_base/src/: io.rs  lib.rs
spl_frontend/: Cargo.toml
spl_frontend/benches/: benches.rs
spl_frontend/spl_frontend_macros/: Cargo.toml
spl_frontend/spl_frontend_macros/src/: lib.rs
spl_frontend/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  table.rs  tokens.rs
spl_frontend/src/ast/: ast_info_traverser.rs  error_container.rs
spl_frontend/src/lexer/: tests.rs  token.rs  utility.rs
spl_frontend/src/lexer/tests/: incremental.rs  mod.rs
spl_frontend/src/parser/: util_parsers.rs  utility.rs
spl_frontend/src/parser/tests/: acker.rs  assignments.rs  call_statements.rs  expressions.rs  idents.rs  if_statements.rs  incremental.rs  keywords.rs  mod.rs  type_declarations.rs
spl_frontend/src/parser/tests/snapshots/: spl_frontend__parser__tests__incremental__arg_deletion.snap  spl_frontend__parser__tests__incremental__arg_insertion.snap  spl_frontend__parser__tests__incremental__delete_condition_lhs.snap  spl_frontend__parser__tests__incremental__delete_condition_rhs.snap  spl_frontend__parser__tests__incremental__delete_inside_block.snap  spl_frontend__parser__tests__incremental__delete_parameter_list.snap  spl_frontend__parser__tests__incremental__destroy_proc.snap  spl_frontend__parser__tests__incremental__if_block_disruption.snap  spl_frontend__parser__tests__incremental__if_block_restoration.snap  spl_frontend__parser__tests__incremental__insert_condition_lhs.snap  spl_frontend__parser__tests__incremental__insert_proc_end.snap  spl_frontend__parser__tests__incremental__insert_proc_middle.snap  spl_frontend__parser__tests__incremental__insert_proc_start.snap  spl_frontend__parser__tests__incremental__joining_deletion.snap  spl_frontend__parser__tests__incremental__param_deletion.snap  spl_frontend__parser__tests__incremental__param_insertion.snap  spl_frontend__parser__tests__incremental__splitting_insertion.snap
spl_frontend/src/table/: build.rs  initialization.rs  semantic.rs
spl_frontend/src/table/semantic/: tests.rs
spl_frontend/src/table/semantic/tests/: arrays.rs  call_statements.rs  comparisons.rs  complete.rs  expressions.rs  mod.rs
spl_frontend/src/table/tests/: mod.rs
spl_frontend/tests/programs/: test1.spl  test2.spl
vscode_client/: language-configuration.json  package.json
vscode_client/src/: extension.ts
vscode_client/syntaxes/: spl.tmLanguage.json
