[workspace]

members = [
    "lsp4spl",
    "spl_frontend",
    "spl_frontend/spl_frontend_macros",
]

[workspace.package]
description = "Language Server for SPL"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
edition = "2021"
rust-version = "1.66"

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3
