[package]
name = "lsp4spl"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.4.0"
clap = { version = "4.1.6", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.26"
httparse = "1.8.0"
log = "0.4.17"
lsp-types = "0.94.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_repr = "0.1.10"
simplelog = "0.12.0"
spl_frontend = { path = "../spl_frontend" }
thiserror = "1.0.38"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["codec"] }

[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }
pretty_assertions = "1.3.0"
