[package]
name = "lsp4spl"
description = "Language Server for SPL"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
version = "0.1.2"
edition = "2021"

[dependencies]
bytes = "1.5.0"
clap = { version = "4.4.11", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.29"
httparse = "1.8.0"
log = "0.4.20"
lsp-types = "0.95.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_repr = "0.1.17"
simplelog = "0.12.1"
spl_frontend = { version = "0.1.2", path = "../spl_frontend" }
thiserror = "1.0.50"
tokio = { version = "1.35.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }

[dev-dependencies]
insta = { version = "1.34.0", features = ["json", "yaml"] }
pretty_assertions = "1.4.0"
