[package]
name = "lsp4spl"
description = "Language Server for SPL"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
version = "0.2.0"
edition = "2021"

[dependencies]
bytes = "1.10.1"
clap = { version = "4.5.38", features = ["derive"] }
color-eyre = "0.6.4"
futures = "0.3.31"
httparse = "1.10.1"
log = "0.4.27"
lsp-types = "0.95.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"
simplelog = "0.12.2"
spl_frontend = { version = "0.1.2", path = "../spl_frontend" }
thiserror = "1.0.69"
tokio = { version = "1.45.0", features = ["full"] }
tokio-util = { version = "0.7.15", features = ["codec"] }

[dev-dependencies]
insta = { version = "1.43.1", features = ["json", "yaml"] }
pretty_assertions = "1.4.1"
