[package]
name = "spl_frontend"
description = "Compiler-Frontend for SPL"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["full"] }
spl_frontend_macros = { version = "0.1.0", path  = "./spl_frontend_macros" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.31.0"
pretty_assertions = "1.4.0"

[[bench]]
name = "benches"
harness = false
