[package]
name = "spl_frontend"
description = "Compiler-Frontend for SPL"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
version = "0.1.2"
edition = "2021"

[dependencies]
nom = "7.1.3"
nom_locate = "4.2.0"
thiserror = "1.0.69"
tokio = { version = "1.45.0", features = ["full"] }
spl_frontend_macros = { version = "0.1.1", path  = "./spl_frontend_macros" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
insta = "1.43.1"
pretty_assertions = "1.4.1"

[[bench]]
name = "benches"
harness = false
