[package]
name = "spl_frontend_macros"
description = "Macros for SPL-Compiler-Frontend"
authors = ["AlecGhost"]
license = "MIT"
repository = "https://github.com/AlecGhost/LSP4SPL"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.56"
quote = "1.0.23"
syn = "1.0.107"
